[package]
name = "docktag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["json"] }
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-rayon = "2.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
